angular config ok + accueil

--- a/WemanityDjAngular/src/app/app.component.html
+++ b/WemanityDjAngular/src/app/app.component.html
@@ -2,10 +2,9 @@
 <div class="container">
   
   <div class="col-sm-12 col-sm-offset-12">
-    <img width="250" src="http://www.wemanity.com/wp-content/uploads/2017/08/wemanity-web-logo-2.png" >
-    <br><br><br>
-    <app-alert></app-alert>
+    <div style="text-align:center">
     <router-outlet></router-outlet>
+    </div>
   </div>
 
 </div>
