--- a/WemanityDjAngular/src/app/home/home.component.html
+++ b/WemanityDjAngular/src/app/home/home.component.html
@@ -1,11 +1,8 @@
 <div class="homeDiv">
-
+    <app-header></app-header>
     <h2>
-        <a class="maClasseTest">azerblazberlkze</a>
-        <h1>
           Bonjour, <br>
           Bienvenue sur ma mini-appli !
-        </h1>
     </h2>
     
     <img src="https://ogust.network.ogust.com/wp-content/uploads/sites/3/2017/06/formation-numerique.jpg" >
